--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Event Durations for Google Calendar",
+  "name": "Time Until Next Event for Google Calendar",
   "description": "Shows event durations on Google Calendar.",
-  "version": "2.1.4",
+  "version": "0.0.1",
   "browser_action": {
     "default_icon": "icons/icon16.png"
   },
